<resources>
    <string name="app_name">WrenchAPP</string>

    <string name="next">Next</string>
    <string name="enter_url">Enter URL</string>
    <string name="login_page">Login Page</string>
    <string name="password">Password</string>
    <string name="admin">Login Name</string>
    <string name="login">Login</string>
    <string name="change_connected_url"><u>Change connected URL</u></string>
    <string name="keep_me_signed_in">Keep me signed-in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="administrator">ADMINISTRATOR</string>
    <string name="documents">Documents</string>
    <string name="login_name">Login Name</string>
    <string name="loading">Loading…</string>
    <string name="remember_me">Remember me?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Try_Again">Try Again</string>
    <string name="error">Error</string>
    <string name="random_letters_here">random letters here</string>

    <string name="underline">I am <u>underlined</u>.</string>
    <string name="random">Random</string>
    <string name="t">T</string>
    <string name="document_number">Document Number</string>
    <string name="document_description">Document Description</string>
    <string name="revision_number">Revision Number</string>
    <string name="project_id">Project ID</string>
    <string name="status">Status</string>
    <string name="doc_number">doc number</string>
    <string name="created_on">Created On</string>
</resources>