<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/home"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/docIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/t"
                android:textColor="#FFFF"
                android:textSize="24sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/docInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="27.5dp"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/random"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/docName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="16dp"
            android:text="@string/random_letters_here"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/downArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:src="@drawable/down_arrow" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="49dp"
            android:padding="5dp"
            android:text="@string/status"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="75dp"
            android:background="#9A9595" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list_Items_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_number"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listDocName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_number"
                android:textColor="#494848"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_description"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listDocDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_description"
                android:textColor="#494848"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revision_number"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listRevNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revision_number"
                android:textColor="#494848"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_id"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listProjectId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_id"
                android:textColor="#494848"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_on"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listCreatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_on"
                android:textColor="#494848"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>