<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="20dp"
        app:cardCornerRadius="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D4C2F4"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="17sp"
                android:paddingTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                >

            <TextView
                android:id="@+id/alert_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="#E91E63"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/alert_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="#009688"
                android:layout_weight="1"
                android:padding="10dp"

                />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>